# roux

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  README_API.md  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: build.yml  format.yaml  python-publish.yml
examples/: detailed_roux_global_imports.ipynb  dev_roux_lib_fast.ipynb  dev_roux_workflow_task.ipynb  dev_workflow.ipynb  lib_roux_data.ipynb  roux_global_imports.ipynb  roux_lib_df.ipynb  roux_lib_df_apply.ipynb  roux_lib_df_plot.ipynb  roux_lib_dfs.ipynb  roux_lib_io.ipynb  roux_lib_log.ipynb  roux_lib_set.ipynb  roux_lib_str.ipynb  roux_lib_sys.ipynb  roux_query.ipynb  roux_stat.ipynb  roux_stat_agg.ipynb  roux_stat_classify.ipynb  roux_stat_cluster.ipynb  roux_stat_corr.ipynb  roux_stat_diff.ipynb  roux_stat_fit.ipynb  roux_stat_norm.ipynb  roux_stat_sets.ipynb  roux_viz_annot.ipynb  roux_viz_ax.ipynb  roux_viz_blends.ipynb  roux_viz_diagram.ipynb  roux_viz_dist.ipynb  roux_viz_ds.ipynb  roux_viz_figure.ipynb  roux_viz_io.ipynb  roux_viz_line.ipynb  roux_viz_scatter.ipynb  roux_viz_sets.ipynb  roux_viz_shapes.ipynb  roux_viz_text.ipynb  roux_viz_theme.ipynb  roux_vizi_select.ipynb  (+7 more)
roux/: __init__.py  global_imports.py  run.py
roux/lib/: __init__.py  df.py  df_apply.py  dfs.py  dict.py  ds.py  google.py  io.py  log.py  seq.py  set.py  str.py  sys.py  text.py
roux/query/: biomart.py  ensembl.py
roux/stat/: agg.py  binary.py  classify.py  cluster.py  compare.py  corr.py  diff.py  enrich.py  fit.py  io.py  network.py  norm.py  paired.py  preprocess.py  regress.py  set.py  sets.py  solve.py  transform.py  variance.py
roux/viz/: __init__.py  annot.py  arrange.py  ax_.py  bar.py  blends.py  colors.py  compare.py  convert.py  diagram.py  diff.py  dist.py  ds.py  figure.py  heatmap.py  image.py  io.py  line.py  scatter.py  sequence.py  set.py  sets.py  shapes.py  svg.py  text.py  theme.py
roux/vizi/: scatter.py  select.py
roux/workflow/: cfgs.py  checks.py  df.py  execute.py  function.py  io.py  knit.py  log.py  monitor.py  nb.py  pms.py  task.py  utils.py  version.py  workflow.py
tests/: test_examples.py
