[project]
name = "roux"
version = "0.1.3"
description = "Convenience functions."
authors = [
  { name = "rraadd88", email = "rohanadandage@gmail.com" }
]
urls = { "Homepage" = "http://github.com/rraadd88/roux" }
requires-python = '>=3.7, <4'
classifiers = [
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]

license = "GPL-3.0-or-later"

readme = "README.md"
dependencies = [
    "numpy>=1.17.3",
    "pandas>=0.25.3,<=2.3.0",
    "pyyaml>=5.1",
    "matplotlib>=2.2",
    "seaborn>=0.8",
    "tqdm>=4.38.0", # logging
    # "regex>=2018.7.11",
]

[optional-dependencies]
interactive = [
    "ipywidgets",
    "ipykernel",
    # "watermark", # session info
]
data = [
    "pyarrow", # fast
    "openpyxl", # special io
]
stat = [
    "scipy>=1.1.0",
    "statsmodels",
    "networkx",
    "scikit-learn",
        ]
viz = [
    "altair",
      ]
workflow = [
    "omegaconf",
    "papermill",
    "argh",
    "ruff",
    "nbconvert",
    "removestar",
]
# An 'all' group that includes all other groups
all = [
    {include-group = "interactive"},
    {include-group = "data"},
    {include-group = "stat"},
    {include-group = "viz"},
    {include-group = "workflow"},
]

## development and maintenance
dev = [
    "pytest",
    "tox",
    "tox-gh-actions",
    "jupyter","ipywidgets","ipykernel",
    # "sphinx","recommonmark",
    "black",
    "coveralls == 3.*",
    "flake8",
    "isort",
    "pytest-cov >= 2,< 7",
    "papermill",
    "lazydocs",
    "regex", ## docs
    {include-group = "all"},    
]

## for uv
[dependency-groups]
interactive = [
    "ipywidgets",
    "ipykernel",
    # "watermark", # session info
]
data = [
    "pyarrow", # fast
    "openpyxl", # special io
]
stat = [
    "scipy>=1.1.0",
    "statsmodels",
    "networkx",
    "scikit-learn",
        ]
viz = [
    "altair",
      ]
workflow = [
    "omegaconf",
    "papermill",
    "argh",
    "ruff",
    "nbconvert",
    "removestar",
]
# An 'all' group that includes all other groups
all = [
    {include-group = "interactive"},
    {include-group = "data"}, # This effectively includes all, as 'docs' includes 'test' etc.
    {include-group = "stat"}, # This effectively includes all, as 'docs' includes 'test' etc.
    {include-group = "viz"}, # This effectively includes all, as 'docs' includes 'test' etc.
    {include-group = "workflow"}, # This effectively includes all, as 'docs' includes 'test' etc.
]

## development and maintenance
dev = [
    "pytest",
    "tox",
    "tox-gh-actions",
    "jupyter","ipywidgets","ipykernel",
    # "sphinx","recommonmark",
    "black",
    "coveralls == 3.*",
    "flake8",
    "isort",
    "pytest-cov >= 2,< 7",
    "papermill",
    "lazydocs",
    "regex", ## docs
    {include-group = "all"},    
]

[tool.uv]
default-groups = ["all"]
package = true

[tool.black]
experimental-string-processing = true
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"

[project.scripts]
roux = "roux.run:parser.dispatch"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"